Uitgebreide update: nieuwe spells, verbeterde listeners en prestatieoptimalisaties